<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Os Meus Lugares</string>
    <string name="hello_world">DAM205</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_lugares">ListLugares</string>
    <string name="title_activity_acerca_de">AcercaDeActivity</string>
    <string name="acerca_de">Acerca De</string>
    <string name="salir">Salir</string>
    <string name="title_activity_edit_lugar">EditLugarActivity</string>
    <string name="listado_lugares">Listado Lugares</string>
    <string name="title_preferencias">Preferencias</string>
    <string name="title_activity_preferencias">PreferenciasActivity</string>
    <string name="add_lugar">Engadir Lugar</string>
    <string name="edit_lugar">Editar Lugar</string>
    <string name="edit_delete">Eliminar Lugar</string>
    <string name="ver_web">Ver web</string>
    <string name="marcar_telefono">marcar teléfono</string>
    <string name="coordenadas_gps">Coordenadas GPS</string>
    <string name="enviar_por_email">Enviar por email</string>
    <string name="cerrar">Cerrar</string>
    <string name="add_categorias">Añadir Categoria</string>
    <string name="delete_categoria">Eliminar Categoria</string>
    <string name="edit_categoria">Editar Categoria</string>
    <string name="list_categorias">Lista de Categorias</string>
    <string name="icono">Icono:</string>
    <string name="addCategoria">Añadir Categoria</string>
    <string name="vacio">No hay categorias</string>

</resources>