<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.osmeuslugares.ListLugares" >

    <item
        android:id="@+id/edit_lugar"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/edit_lugar" android:visible="true" android:icon="@android:drawable/ic_menu_edit"/>
    <item android:id="@+id/delete_lugar" android:icon="@android:drawable/ic_menu_delete" android:title="@string/edit_delete" android:visible="true" android:showAsAction="always"></item>
    <item android:id="@+id/ver_web" android:title="@string/ver_web" android:showAsAction="always" android:visible="true"></item>
    <item android:id="@+id/marcar_telefono_lugar" android:title="@string/marcar_telefono"></item>
    <item android:id="@+id/enviar_por_email" android:title="@string/enviar_por_email"></item>

</menu>
