<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.osmeuslugares.MainActivity" >

    <item android:id="@+id/listLugares" android:title="@string/listado_lugares"></item><item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_launcher" android:visible="true"/>
    <item
        android:id="@+id/acerca_de"
        android:orderInCategory="100"
        android:title="@string/acerca_de"
        android:icon="@android:drawable/ic_menu_info_details" android:visible="true"/>
      <item
        android:id="@+id/salir"
        android:orderInCategory="100"
        android:title="@string/salir" 
        android:icon="@drawable/ic_launcher" android:visible="true"/>
      
          <item 
        android:id="@+id/listCategorias" 
        android:title="@string/list_categorias">
    </item>
      

</menu>
